Apache Host Control v.1.5(ENG)

    New features:
        Multiple client-side SSL.
        Nginx / Client-side SSL support
        Web / Client-side SSL

    Fixes:
        Php / FastCGI path to unix socket

Apache Host Control v.1.4(ENG)

    New features:
        Module for backup databases and websites. Support ftp and sftp.
        Virtualenv (Python, Django)
        Screenrc / Custom pattern

Apache Host Control v.1.3(ENG)

    New features:
        Basic auth for nginx & apache
        Web interface
        Confluence & Jira installator

    Fixes:
        Django / Path for host name


Apache Host Control v.1.2(ENG)

    New features:
        iRedMail Support
        Makedeb functionality
        Zsh support
        Apache / WSGI(Python,Django)
        Nginx / uWSGI(Python,Django)
        MySQL,FTP / Random password

    Fixes:
        FTP & GIT path fixes
        Fixes on django name of project (numerical & another bad symbols)


Apache Host Control v.1.1(ENG)

    New features:
        Sendmail cap.
        Git deployment.

    Apache:
        Ruby & Ruby on Rails.


Apache Host Control v.1.0(ENG)

    New features:
        Bind zone support.
        EncFS protection.
        Easy tests.

    FTP:
        Custom login and password.
        Any folder sharing functionality.
        Subdomain folder fixes.

    MySQL:
        Custom login and password for database.

    Nginx:
        Many fixes and changes for all supported languages.
        SSL support.
        Proxy config for apache.
        Enable/Disable functionality.

    Apache:
        Minor fixes.
        Static optimization flag.
        SSL protection functionality.

    Installation:
        lighttpd->simple_vhost was added.
        One step for install all able services in package.
        Firewall rules. (location: /etc/init.d/rc.fw)


################################################################################


Apache Host Control v.1.5(RUS)

    Новые возможности: