@@ -160,6 +160,13 @@ Certificates
 --------------------------------------------------------------
 
 --------------------------------------------------------------
+OpenVPN
+--------------------------------------------------------------
+# ahc -m vpn -a client1
+# ahc -m vpn -d client1
+--------------------------------------------------------------
+
+--------------------------------------------------------------
 Projects protection
 --------------------------------------------------------------
 # ahc -m crypt -a encrypt
@@ -191,6 +198,7 @@ Service Installing
 # ahc -m install -s jira
 # ahc -m install -s confluence
 # ahc -m install -s web
+# ahc -m install -s vpn
 # ahc -m install -s all
 --------------------------------------------------------------
 
