@@ -1,0 +1,29 @@
+proto tcp-server
+mode server
+tls-server
+daemon
+port 777
+dev tun
+ifconfig 10.8.0.1 10.8.0.2
+ifconfig-pool 10.8.0.2 10.8.0.128
+ifconfig-pool-persist ipp.txt
+keepalive 10 120
+client-to-client
+persist-tun
+persist-key
+comp-lzo
+log-append /var/log/openvpn.log
+script-security 2 system
+up "echo 1 > /proc/sys/net/ipv4/conf/all/forwarding && iptables -t nat -A POSTROUTING -s 10.8.0.0/24 -j MASQUERADE #"
+down "iptables -t nat -D POSTROUTING -s 10.8.0.0/24 -j MASQUERADE #"
+ca ca.crt
+cert server.crt
+key server.key
+dh dh1024.pem
+push "dhcp-option DNS 8.8.8.8"
+push "dhcp-option DNS 8.8.4.4"
+push "route-gateway 10.8.0.1"
+push "redirect-gateway def1"
+push "comp-lzo"
+duplicate-cn
+cipher DES-EDE3-CBC
