@@ -4,6 +4,7 @@ Apache Host Control v.1.5(ENG)
         Multiple client-side SSL.
         Nginx / Client-side SSL support
         Web / Client-side SSL
+        OpenVPN support
 
     Fixes:
         Php / FastCGI path to unix socket
@@ -92,6 +93,7 @@ Apache Host Control v.1.5(RUS)
         Мульти поддержка клиентских SSL сертификатов
         Nginx / поддержка клиентских SSL сертификатов
         Web / поддержка клиентских SSL сертификатов
+        Поддержка OpenVPN
 
     Исправления:
         Php / FastCGI путь к unix socket
